--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "type": "module",
   "private": true,
   "scripts": {
+    "test": "vitest",
+    "test:unit": "vitest --project unit",
+    "test:nuxt": "vitest --project nuxt",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
     "build": "nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
@@ -28,6 +33,12 @@
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.14.0",
-    "prettier": "^3.7.3"
+    "@playwright/test": "^1.57.0",
+    "@types/node": "^22.10.1",
+    "@vue/test-utils": "^2.4.6",
+    "happy-dom": "^20.0.11",
+    "playwright-core": "^1.57.0",
+    "prettier": "^3.7.3",
+    "vitest": "^4.0.14"
   }
 }
