--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "vue-router": "^4.6.3"
   },
   "devDependencies": {
+    "@nuxtjs/i18n": "^10.2.1",
     "@nuxtjs/tailwindcss": "^6.14.0",
     "@playwright/test": "^1.57.0",
     "@types/node": "^22.10.1",
