--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "happy-dom": "^20.0.11",
     "playwright-core": "^1.57.0",
     "prettier": "^3.7.3",
+    "prettier-plugin-tailwindcss": "^0.7.2",
     "vitest": "^4.0.14"
   }
 }
