--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@iconify-json/logos": "^1.2.10",
+    "@iconify-json/lucide": "^1.2.79",
+    "@iconify-json/mdi": "^1.2.3",
     "@nuxtjs/i18n": "^10.2.1",
     "@nuxtjs/tailwindcss": "^6.14.0",
     "@playwright/test": "^1.57.0",
