--- a/package.json
+++ b/package.json
@@ -25,11 +25,14 @@
     "@nuxtjs/color-mode": "^4.0.0",
     "@unhead/vue": "^2.0.3",
     "better-sqlite3": "^12.5.0",
+    "echarts": "^6.0.0",
     "eslint": "^9.0.0",
     "nuxt": "^4.2.1",
+    "nuxt-echarts": "^1.0.1",
     "reka-ui": "^2.6.0",
     "typescript": "^5.6.3",
     "vue": "^3.5.25",
+    "vue-echarts": "^8.0.1",
     "vue-router": "^4.6.3",
     "zod": "^3.24.1"
   },
