feat: implement complete data table system with CRUD operations
- Add DpDataTable component with TanStack Table integration
  - Support for sorting, pagination, filtering, row selection
  - Manual and client-side pagination modes
  - Row click functionality to open edit modal
  - Bulk actions support via slots

- Add DpDataTableFilters component
  - Multiple filter types: select, checkbox, number-range, date-range
  - Search functionality
  - Expandable filter panel
  - Clear filters action

- Create three data table pages
  - Products: Full CRUD with create/edit/delete modals
  - Orders: Read-only table with status badges
  - Users: Read-only table with role badges

- Add useDataTable composable for data fetching
  - Query params management (search, sort, filters, pagination)
  - Loading states
  - API integration with $fetch

- Create API endpoints
  - Products: GET, POST, PUT, DELETE with Zod validation
  - Orders: GET with query params
  - Users: GET with query params
  - Mock data utilities for all entities

- Add helper utilities
  - dataTableColumns.ts: Reusable column creators
    - Selection column with checkboxes
    - Currency column with formatting
    - Date column with i18n formatting
    - Image column with fallback

- Create form modal components
  - ProductFormModal: Create/edit products with validation
  - ConfirmDeleteModal: Reusable delete confirmation

- Add comprehensive E2E tests
  - Data table navigation and display
  - Search functionality
  - Filter panel interactions
  - Row click to open edit modal
  - All 47 tests passing

Technical improvements:
- Fix icon rendering in action columns using resolveComponent
- Implement proper event delegation for row clicks
- Add cursor pointer visual feedback on clickable cells
- Prevent row click when clicking actions or checkboxes

--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@nuxt/image": "2.0.0",
     "@nuxt/scripts": "0.13.0",
     "@nuxtjs/color-mode": "^4.0.0",
+    "@supabase/supabase-js": "^2.87.1",
+    "@tanstack/vue-table": "^8.21.3",
     "@unhead/vue": "^2.0.3",
     "better-sqlite3": "^12.5.0",
     "echarts": "^6.0.0",
