rebrand: update branding to Business Operations Framework
- Update brand name and tagline in theme config
- Update translations (EN/FR) to remove technical stack mentions
- Update page metadata to focus on business value
- Update documentation to emphasize business benefits
- Update test assertions for new brand name

Key changes:
- Brand name: "Dashboard Pro" → "Business Operations Framework"
- Tagline: "Professional Nuxt Dashboard Template" → "Business Operations Platform for Modern Teams"
- Remove all Nuxt/Vue/TypeScript mentions from user-facing text
- Focus messaging on business value instead of technical details

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nuxt-dashbaord-pro",
+  "name": "nuxt-business-operations-framework",
   "type": "module",
   "private": true,
   "scripts": {
