--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 # Netlify configuration for Nuxt 4 with Nitro
 [build]
   command = "npm run build"
-  # publish removed - Netlify auto-detects .output for Nuxt with nitro preset
+  publish = ".output/public"
 
 [build.environment]
   NODE_VERSION = "20"
