--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,7 @@
 # Netlify configuration for Nuxt 4 with Nitro
 [build]
-  command = "npm run build"
+  command = "npx nuxt generate"
+  publish = ".output/public"
 
 [build.environment]
   NODE_VERSION = "20"
