--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 # Netlify configuration for Nuxt 4 with Nitro
 [build]
-  command = "npm run generate"
+  command = "npm run build"
   publish = ".output/public"
 
 [build.environment]
