fix: use runtime env vars to prevent token exposure in build

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 # Turso Database (SQLite)
 # Create a database at https://turso.tech
 # Then run: turso db tokens create <db-name>
-TURSO_DATABASE_URL=libsql://your-db-name-your-org.turso.io
-TURSO_AUTH_TOKEN=your-auth-token
+# Use NUXT_ prefix so values are injected at runtime (not build time)
+NUXT_TURSO_DB_URL=libsql://your-db-name-your-org.turso.io
+NUXT_TURSO_AUTH_TOKEN=your-auth-token
